force-app/main/default/objects/Producto_Portal__c/fields/CajaLargoCm__c.field-meta.xml
<CustomField>
    <fullName>CajaLargoCm__c</fullName>
    <label>Caja (largo cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>