force-app/main/default/objects/Producto_Portal__c/fields/CajaM3__c.field-meta.xml
<CustomField>
    <fullName>CajaM3__c</fullName>
    <label>Caja (m3)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>