force-app/main/default/objects/Producto_Portal__c/fields/CajaPesoKg__c.field-meta.xml
<CustomField>
    <fullName>CajaPesoKg__c</fullName>
    <label>Caja (peso kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>