force-app/main/default/objects/Producto_Portal__c/fields/CodigoArancelario__c.field-meta.xml
<CustomField>
    <fullName>CodigoArancelario__c</fullName>
    <label>Código arancelario</label>
    <length>10</length>
    <type>Text</type>
</CustomField>