force-app/main/default/objects/Producto_Portal__c/fields/CostoPackaging__c.field-meta.xml
<CustomField>
    <fullName>CostoPackaging__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Costo Packaging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>