force-app/main/default/objects/Producto_Portal__c/fields/Masterbox2_detalle__c.field-meta.xml
<CustomField>
    <fullName>Masterbox2_detalle__c</fullName>
    <label>Masterbox2 detalle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>