force-app/main/default/objects/Producto_Portal__c/fields/Masterbox2AltoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox2AltoCm__c</fullName>
    <label>Masterbox2 (alto cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>