force-app/main/default/objects/Producto_Portal__c/fields/Masterbox2AnchoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox2AnchoCm__c</fullName>
    <label>Masterbox2 (ancho cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>