force-app/main/default/objects/Producto_Portal__c/fields/Masterbox2LargoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox2LargoCm__c</fullName>
    <label>Masterbox2 (largo cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>