force-app/main/default/objects/Producto_Portal__c/fields/Masterbox2M3__c.field-meta.xml
<CustomField>
    <fullName>Masterbox2M3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Masterbox2 (m3)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>