force-app/main/default/objects/Producto_Portal__c/fields/Masterbox2PesoKg__c.field-meta.xml
<CustomField>
    <fullName>Masterbox2PesoKg__c</fullName>
    <label>Masterbox2 (peso kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>