force-app/main/default/objects/Producto_Portal__c/fields/Masterbox3AltoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox3AltoCm__c</fullName>
    <label>Masterbox3 (alto cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>