force-app/main/default/objects/Producto_Portal__c/fields/Masterbox3AnchoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox3AnchoCm__c</fullName>
    <label>Masterbox3 (ancho cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>