force-app/main/default/objects/Producto_Portal__c/fields/Masterbox3LargoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox3LargoCm__c</fullName>
    <label>Masterbox3 (largo cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>