force-app/main/default/objects/Producto_Portal__c/fields/MasterboxAltoCm__c.field-meta.xml
<CustomField>
    <fullName>MasterboxAltoCm__c</fullName>
    <label>Masterbox (alto cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>