force-app/main/default/objects/Producto_Portal__c/fields/MasterboxAnchoCm__c.field-meta.xml
<CustomField>
    <fullName>MasterboxAnchoCm__c</fullName>
    <label>Masterbox (ancho cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>