force-app/main/default/objects/Producto_Portal__c/fields/MasterboxLargoCm__c.field-meta.xml
<CustomField>
    <fullName>MasterboxLargoCm__c</fullName>
    <label>Masterbox (largo cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>