force-app/main/default/objects/Producto_Portal__c/fields/MasterboxPesoKg__c.field-meta.xml
<CustomField>
    <fullName>MasterboxPesoKg__c</fullName>
    <label>Masterbox (peso kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>