force-app/main/default/objects/Producto_Portal__c/fields/MOQ__c.field-meta.xml
<CustomField>
    <fullName>MOQ__c</fullName>
    <label>MOQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>