force-app/main/default/objects/Producto_Portal__c/fields/PrecioDeFabrica__c.field-meta.xml
<CustomField>
    <fullName>PrecioDeFabrica__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Precio de fabrica (no incluye costos de importación)</description>
    <label>Costo Fábrica</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>