force-app/main/default/objects/Producto_Portal__c/fields/Producto2_detalle__c.field-meta.xml
<CustomField>
    <fullName>Producto2_detalle__c</fullName>
    <label>Producto2 detalle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>