force-app/main/default/objects/Producto_Portal__c/fields/Producto2AltoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto2AltoCm__c</fullName>
    <label>Producto2 (alto cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>