force-app/main/default/objects/Producto_Portal__c/fields/Producto2AnchoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto2AnchoCm__c</fullName>
    <label>Producto2 (ancho cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>