force-app/main/default/objects/Producto_Portal__c/fields/Producto2LargoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto2LargoCm__c</fullName>
    <label>Producto2 (largo cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>