force-app/main/default/objects/Producto_Portal__c/fields/Producto2PesoKg__c.field-meta.xml
<CustomField>
    <fullName>Producto2PesoKg__c</fullName>
    <label>N.W. 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>