force-app/main/default/objects/Producto_Portal__c/fields/Producto3AltoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto3AltoCm__c</fullName>
    <label>Producto3 (alto cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>