force-app/main/default/objects/Producto_Portal__c/fields/Producto3AnchoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto3AnchoCm__c</fullName>
    <label>Producto3 (ancho cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>