force-app/main/default/objects/Producto_Portal__c/fields/Producto3DiametroCm__c.field-meta.xml
<CustomField>
    <fullName>Producto3DiametroCm__c</fullName>
    <label>Producto 3 (diámetro cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>