force-app/main/default/objects/Producto_Portal__c/fields/Producto3LargoCm__c.field-meta.xml
<CustomField>
    <fullName>Producto3LargoCm__c</fullName>
    <label>Producto3 (largo cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>