force-app/main/default/objects/Producto_Portal__c/fields/Producto3PesoBruto__c.field-meta.xml
<CustomField>
    <fullName>Producto3PesoBruto__c</fullName>
    <label>G.W. 3</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>