force-app/main/default/objects/Producto_Portal__c/fields/Producto3PesoKg__c.field-meta.xml
<CustomField>
    <fullName>Producto3PesoKg__c</fullName>
    <label>N.W. 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>