force-app/main/default/objects/Producto_Portal__c/fields/Producto_detalle__c.field-meta.xml
<CustomField>
    <fullName>Producto_detalle__c</fullName>
    <label>Producto detalle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>