force-app/main/default/objects/Producto_Portal__c/fields/ProductoAltoCm__c.field-meta.xml
<CustomField>
    <fullName>ProductoAltoCm__c</fullName>
    <label>Producto (alto cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>