force-app/main/default/objects/Producto_Portal__c/fields/ProductoAnchoCm__c.field-meta.xml
<CustomField>
    <fullName>ProductoAnchoCm__c</fullName>
    <label>Producto (ancho cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>