force-app/main/default/objects/Producto_Portal__c/fields/ProductoDiametroCm__c.field-meta.xml
<CustomField>
    <fullName>ProductoDiametroCm__c</fullName>
    <label>Producto (diámetro cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>