force-app/main/default/objects/Producto_Portal__c/fields/ProductoLargoCm__c.field-meta.xml
<CustomField>
    <fullName>ProductoLargoCm__c</fullName>
    <label>Producto (largo cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>