force-app/main/default/objects/Producto_Portal__c/fields/ProductoPesoKg__c.field-meta.xml
<CustomField>
    <fullName>ProductoPesoKg__c</fullName>
    <label>N.W.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>