force-app/main/default/objects/Producto_Portal__c/fields/UnidadesContainer20__c.field-meta.xml
<CustomField>
    <fullName>UnidadesContainer20__c</fullName>
    <label>Unidades container 20&apos;</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>