force-app/main/default/objects/Producto_Portal__c/fields/UnidadesContainer40__c.field-meta.xml
<CustomField>
    <fullName>UnidadesContainer40__c</fullName>
    <label>Unidades container 40&apos;</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>