force-app/main/default/objects/Producto_Portal__c/fields/UnidadesHQ__c.field-meta.xml
<CustomField>
    <fullName>UnidadesHQ__c</fullName>
    <label>Unidades container 40&apos;HQ</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>