force-app/main/default/objects/Producto_Portal__c/fields/UnidadesPorMasterBox__c.field-meta.xml
<CustomField>
    <fullName>UnidadesPorMasterBox__c</fullName>
    <label>Unidades por Masterbox</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>